# engineai_robotics_native_sdk_forge

./: .gitignore  AGENTS.md  README.md  README_CN.md  build.sh  env.sh  install.sh  run.sh
assets/config/pm01_edu/: mode.yaml
assets/config/pm01_edu/kick/: default.yaml
assets/config/pm01_edu/rl_bilidance_tracking/: default.yaml
assets/config/pm01_edu/rl_jumping_tracking/: default.yaml
assets/config/pm01_edu/rl_lab/: default.yaml
assets/config/pm01_edu/rl_power_shot_tracking/: default.yaml
assets/config/pm01_edu/rl_stamp_tracking/: default.yaml
assets/config/pm01_edu/task_motion/: default.yaml
docker/: generate.sh
docker/dockerfiles/: docker-compose.yml
scripts/: build_mujoco.sh  build_ros2_env.sh  replay_mujoco_log.sh  replay_npz_motion_in_mujoco.py  replay_npz_motion_in_mujoco.sh  run_robot.sh
simulation/mujoco/: CMakeLists.txt  main.cc
simulation/mujoco/src/replay/: CMakeLists.txt
simulation/mujoco/src/replay/include/mujoco_log_replay/: mujoco_log_replay.h
simulation/mujoco/src/replay/src/: mujoco_log_replay.cc  mujoco_log_replay_main.cc
simulation/mujoco/src/replay/tests/: test_mujoco_log_replay.cc
src/data/_param/rl_jumping_tracking_param/: rl_jumping_tracking_param.h
src/data/_param/rl_lab_param/: rl_lab_param.h
src/data/_param/rl_tracking_motion_param/: rl_tracking_motion_param.h
src/runner/rl_lab/: CMakeLists.txt
src/runner/rl_lab/src/: rl_lab_runner.cc
src/runner/rl_tracking_motion/: CMakeLists.txt  test_policy_io_mcap_logger.cc
tools/: convert_policy_to_mnn.py
tools/virtual_gamepad/ui/: virtual_gamepad_widget.py
(+12 files in other folders)
